<resources>
    <string name="adicionar">Adicionar</string>
    <string name="app_name">Pokédex</string>
    <string name="botao_voltar">Botão voltar</string>
    <string name="cancelar">Cancelar</string>
    <string name="carregando">Carregando</string>
    <string name="configuracoes">Configurações</string>
    <string name="deletando">Deletando…</string>
    <string name="deletar_pokemon">Deletar pokémon?</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="erro">Erro</string>
    <string name="erro_inesparado">Ocorreu um erro inesperado, tente novamente.</string>
    <string name="falha_conexao_verifique_sua_conexao">Sem conexão, verifique sua conexão e tente novamente.</string>
    <string name="input_imagem">Imagem (URL)</string>
    <string name="input_nome">Nome *</string>
    <string name="input_numero">Nº *</string>
    <string name="input_tipo_primario">Tipo primário *</string>
    <string name="nao_sera_possivel_recuperalo">Não será possivel recuperá-lo.</string>
    <string name="nome">Nome</string>
    <string name="numero_contraido">Nº</string>
    <string name="preenchimento_obrigatorio">Preenchimento obrigatório</string>
    <string name="obrigatorio">Obrigatório</string>
    <string name="pokemon_nao_encontrado">Nenhum pokémon encontrado.</string>
    <string name="pokemon_removido">Pokémon removido com sucesso.</string>
    <string name="salvar">Salvar</string>
    <string name="sem_conexao">Sem conexão</string>
    <string name="tipo_descricao">Tipo #</string>
    <string name="tipo_secundario">Tipo secundário</string>
    <string name="url_invaldo">URL Inválido</string>
    <string name="verifique_a_conexao">Verifique a sua conexão com a internet.</string>

    <string name="type0">Nenhum</string>
    <string name="type1">Normal</string>
    <string name="type2">Fogo</string>
    <string name="type3">Lutador</string>
    <string name="type4">Água</string>
    <string name="type5">Voador</string>
    <string name="type6">Planta</string>
    <string name="type7">Venenoso</string>
    <string name="type8">Elétrico</string>
    <string name="type9">Terrestre</string>
    <string name="type10">Psiquico</string>
    <string name="type11">Pedra</string>
    <string name="type12">Gelo</string>
    <string name="type13">Inseto</string>
    <string name="type14">Dragão</string>
    <string name="type15">Fantasma</string>
    <string name="type16">Sombrio</string>
    <string name="type17">Aço</string>
    <string name="type18">Fada</string>

</resources>
