<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ImageLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_imagem"
        android:paddingBottom="@dimen/spaceMD"
        app:errorEnabled="true"
        app:helperText=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textWebEmailAddress|textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spaceLG"
        android:hint="@string/input_nome"
        android:paddingBottom="@dimen/spaceMD"
        app:errorEnabled="true"
        app:helperText=" "
        app:layout_constraintEnd_toStartOf="@+id/NumberLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Name"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NumberLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/numberWidth"
        android:layout_height="wrap_content"
        android:hint="@string/input_numero"
        android:paddingBottom="@dimen/spaceMD"
        app:errorEnabled="true"
        app:helperText=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/AuxView"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ImageLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Type1Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_tipo_primario"
        android:paddingBottom="@dimen/spaceMD"
        app:errorEnabled="true"
        app:helperText=" "
        app:layout_constraintEnd_toEndOf="@+id/NumberLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameLayout">

        <AutoCompleteTextView
            android:id="@+id/Type1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Type2Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tipo_secundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Type1Layout"
        app:layout_constraintTop_toBottomOf="@+id/Type1Layout">

        <AutoCompleteTextView
            android:id="@+id/Type2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btnMarginHorizontal"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/btnMarginHorizontal"
        android:layout_marginBottom="32dp"
        android:enabled="true"
        app:cornerRadius="@dimen/buttonCorner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Type2Layout"
        app:layout_constraintStart_toStartOf="@+id/Type1Layout"
        app:layout_constraintTop_toBottomOf="@+id/Type2Layout" />

</androidx.constraintlayout.widget.ConstraintLayout>